--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Farman Portfolio</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   
+   <section class="top-banner">
+      <div class="half-width">
+         <h1>Welcome To</h1>
+         <h1><span class="orange-color">Farman's</span> World!</h1>
+         <h3>Hi there! I am Engineear and Professional Webdevloper as well as Digital Marketer</h3>
+         <p>I am also expert in Font Developer,Portfolio Developer,SEO,Digital marketing,YouTube,SEO
+            Facebook,Ads,YouTube
+            Ads creation,Shopify store,Product listing,Business Promotin,Graphic design,Data entry,MS Excel,Certificate
+            design,Logo design,Logo editing,Adobe Photoshop,Photo editing,Articles writing,Article rewriting,Link
+            building,Product listing,Web design,Android app,Data entry,MS Office</p>
+         <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">Hire me</a>
+      </div>
+      <div class="half-width">
+         <img src="images/farman-developer.png" alt="">
+      </div>
+   </section>
+
 </body>
+
 </html>
