--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
          <img src="images/farman-developer.png" alt="">
       </div>
    </section>
+   <section class="dream-big">
+      <div class="half-width">
+         <img src="images/my-bg2.png" alt="">
+      </div>
+      <div class="half-width">
+         <h1>Dream Big</h1>
+         <h2>Become a Professional Webdevloper</h2>
+         <p>I am a professional Webdevloper and Digital Marketing Expert. I can help you with your Facebook, Instagram,
+            LinkedIn, and
+            YouTube channels and also help you with channel name, description, art, SEO, playlist, section, trailer
+            setup, branding, monetization, etc. I will do this job with my best sensitivity, and I will help you
+            according to your demands. I have professional training on creating and setup YouTube channels, and I am
+            also a YouTube developer. As well as I have completed many practical projects with my team about YouTube.
+            Try me once. You can trust me because my total work is manual and quality guaranteed. I will try to give you
+            my best quality work, and I can give you a better result. Your regards farman6474 Thank you!</p>
+         <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+      </div>
+   </section>
 
 </body>
 
