--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-   <section class="top-banner">
+   <section class="top-banner flexiable-container">
       <div class="half-width">
          <h1>Welcome To</h1>
          <h1><span class="orange-color">Farman's</span> World!</h1>
@@ -29,7 +29,7 @@
          <img src="images/farman-developer.png" alt="">
       </div>
    </section>
-   <section class="dream-big">
+   <section class="dream-big flexiable-container">
       <div class="half-width">
          <img src="images/my-bg2.png" alt="">
       </div>
@@ -47,7 +47,34 @@
          <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
       </div>
    </section>
+   <section class="experience-area">
+      <div>
+         <h1>Experiences:</h1>
+      </div>
+      <div class="flexiable-container">
+         <div id="full-stack-developer" class="experience-item">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-color">2019-Present Pro-Level Developer </h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+               efficient.
+               I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even
+               know
+               the deployment, server and security. I will give you 100% web solution.</p>
+         </div>
+         <div id="baby-web-developer" class="experience-item">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-color">2020-2024 | Pro-level Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+               it
+               to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+         </div>
+      </div>
+
+   </section>
 
 </body>
+<footer>
+   <p>© Farman's 2023, a Web Develoment initiative.</p>
+</footer>
 
 </html>
